--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.2",
+    "react-select": "^5.7.0",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
     "xlsx": "^0.18.5"
