--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.11.6",
+    "@types/material-ui": "^0.21.12",
+    "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/sass": "^1.43.1",
     "@types/styled-components": "^5.1.26",
@@ -21,7 +23,9 @@
     "axios": "^1.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.2",
     "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.6.2",
     "react-select": "^5.7.0",
     "sass": "^1.57.1",
